--- a/Zajęcia 5.ipynb
+++ b/Zajęcia 5.ipynb
@@ -340,9 +340,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "15ba4383",
+   "metadata": {},
+   "source": [
+    "I. Napisz program wczytujący podane przez użytkownika imiona i nazwiska osób, i zwracający zbiór zebranych imion oraz listę nazwisk. Program musi być w stanie przyjąć tyle imion ile użytkownik chce mu dostarczyć i zakończyć wczytywanie na polecenie użytkownika."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "32108152",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wpisz imię lub end: Andrzej\n",
+      "Wpisz nazwisko lub end: Geremek\n",
+      "Wpisz imię lub end: end\n",
+      "Wpisz nazwisko lub end: end\n",
+      "{'Andrzej'}\n",
+      "['Geremek']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sname=set()\n",
+    "name=[]\n",
+    "war = 1\n",
+    "while war==1:\n",
+    "    a = input(\"Wpisz imię lub end: \")\n",
+    "    b = input(\"Wpisz nazwisko lub end: \")\n",
+    "    sname.add(a)\n",
+    "    name.append(b)\n",
+    "    if a == \"end\":\n",
+    "        war=2\n",
+    "sname.remove(\"end\")\n",
+    "name.remove(\"end\")\n",
+    "print(sname)\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "076f032b",
+   "metadata": {},
+   "source": [
+    "II. Nie rozumiem zadania :)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18383e64",
+   "id": "e0288a5c",
    "metadata": {},
    "outputs": [],
    "source": []
